rel is now a proper poly with the ability to nest and walk with furis. added ( ) capabilties for demarcating an obj in parser. this enables the creation of rels whose dom is rel or rng is rel -- recurssively.